# superpoint_graph

./: .gitignore  .gitmodules  GenerateS3disdata.ipynb  GenerateS3disdata.py  LICENSE  README.md  S3DIS.md  S3DIS_fix.diff  Semantic3D.md  SuperpointInference.ipynb  SuperpointInference.py  env_superpoint.yml  partition.sh  pcl_segmentation.ipynb  pcl_segmentation.py  pointcloudsegmentation.py  segmentation_demo-Copy1.ipynb  segmentation_demo-Copy1.py  train.sh  vKITTI3D.md  visualisation.py
learning/: __init__.py  custom_dataset.py  evaluate.py  evaluate_s3dis.py  graphnet.py  main.py  metrics.py  modules.py  pointnet.py  s3dis_dataset.py  sema3d_dataset.py  spg.py  vkitti_dataset.py
learning/ecc/: GraphConvInfo.py  GraphConvModule.py  GraphPoolInfo.py  GraphPoolModule.py  __init__.py  cuda_kernels.py  test_GraphConvModule.py  test_GraphPoolModule.py  utils.py
partition/: README.md  compute_features.py  graphs.py  partition.py  partition_S3DIS.py  partition_Semantic3D.py  provider.py  vis_result.py  visualize.py  write_Semantic3d.py
partition/cutpursuit/: CMakeLists.txt
partition/cutpursuit/include/: API.h  Common.h  CutPursuit.h  CutPursuit_KL.h  CutPursuit_L2.h  CutPursuit_Linear.h  Graph.h
partition/cutpursuit/src/: CMakeLists.txt  cutpursuit.cpp
partition/desc/: CMakeLists.txt  desc.cpp
partition/ply_c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ply_c.cpp  python_wrapper.h
processing/: splitting.ipynb  splitting.py
providers/: datasets.py
results/: cmdline.txt
supervized_partition/: evaluate_partition.py  folderhierarchy.py  generate_partition.py  graph_processing.py  losses.py  supervized_partition.py
